<resources>
    <string name="app_name">위싱노트</string>
    <string name="title_home">Home</string>
    <string name="title_mypage">Mypage</string>
    <string name="title_regist">Regist</string>
    <string name="title_recommend">Recommend</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
