<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_mypage" />

    <item
        android:id="@+id/navigation_regist"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/title_regist" />
    <item
        android:id="@+id/navigation_recommend"
        android:icon="@android:drawable/btn_star"
        android:title="@string/title_recommend" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
